--- a/static/fb/auth-en.html
+++ b/static/fb/auth-en.html
@@ -16,6 +16,18 @@
   <div id="loading">Loading...</div>
   <div id="loaded" class="hidden">
     <div id="main">
+      <div id="user-signed-in" class="hidden">
+        <div id="user-info">
+          <div id="photo-container">
+            <img id="photo">
+          </div>
+          <div id="name"></div>
+          <div id="email"></div>
+          <div id="is-new-user"></div>
+          <div class="clearfix"></div>
+        </div>
+      </div>
+      
       <div id="user-signed-out" class="hidden">
         <div id="firebaseui-spa">
           <div id="firebaseui-container"></div>
@@ -91,7 +103,27 @@ function getUiConfig() {
  * @param {!firebase.User} user
  */
 var handleSignedInUser = function(user, isNewUser) {
+  document.getElementById('user-signed-in').style.display = 'block';
   document.getElementById('user-signed-out').style.display = 'none';
+  document.getElementById('name').textContent = user.displayName;
+  document.getElementById('email').textContent = user.email;
+  document.getElementById('phone').textContent = user.phoneNumber;
+  if (user.photoURL) {
+    var photoURL = user.photoURL;
+    // Append size to the photo URL for Google hosted images to avoid requesting
+    // the image with its original resolution (using more bandwidth than needed)
+    // when it is going to be presented in smaller size.
+    if ((photoURL.indexOf('googleusercontent.com') != -1) ||
+        (photoURL.indexOf('ggpht.com') != -1)) {
+      photoURL = photoURL + '?sz=' +
+          document.getElementById('photo').clientHeight;
+    }
+    document.getElementById('photo').src = photoURL;
+    document.getElementById('photo').style.display = 'block';
+  } else {
+    document.getElementById('photo').style.display = 'none';
+  }
+
   console.log(user);
   //window._postMessage("LOGGED_IN/" + user.uid, '*');
 
@@ -105,9 +137,9 @@ var handleSignedInUser = function(user, isNewUser) {
  * Displays the UI for a signed out user.
  */
 var handleSignedOutUser = function() {
+  document.getElementById('user-signed-in').style.display = 'none';
   document.getElementById('user-signed-out').style.display = 'block';
   ui.start('#firebaseui-container', getUiConfig());
-
   window._postMessage("/LOGGED_OUT/", '*');
 };
 
