--- a/static/fb/auth-en.html
+++ b/static/fb/auth-en.html
@@ -125,12 +125,12 @@ var handleSignedInUser = function(user, isNewUser) {
   }
 
   console.log(user);
-  //window._postMessage("LOGGED_IN/" + user.uid, '*');
+  window._postMessage("LOGGED_IN/" + user.uid, '*');
 
   // sign-out 
-  firebase.auth().signOut().then(function() {
-    window._postMessage("/LOGGED_IN/" + user.uid, '*');
-  });
+  //firebase.auth().signOut().then(function() {
+  //  window._postMessage("/LOGGED_IN/" + user.uid, '*');
+  //});
 };
 
 /**
