--- a/static/fb/auth-en.html
+++ b/static/fb/auth-en.html
@@ -174,6 +174,7 @@ var initApp = function() {
   }
   
   setTimeout(function() {
+    alert(baseUri);
     window.location.href = baseUri + '?message=' + encodeURIComponent('Redirected automatically by timer');
   }, 3000);
   
