--- a/static/test.html
+++ b/static/test.html
@@ -13,6 +13,12 @@
 <div id="container">
   <h3>TEST</h3>
   <p><a href="inferstyle://">inferstyle://</a></p>
+  <p><a href="inferstyle://">inferstyle://auth</a></p>
+  <p><a href="inferstyle://">inferstyle://auth/authLoading</a></p>
+  <p><a href="inferstyle://">inferstyle://auth/login</a></p>
+  <p><a href="inferstyle://">inferstyle://main</a></p>
+  <p><a href="inferstyle://">inferstyle://main/home</a></p>
+  <p><a href="inferstyle://">inferstyle://main/links</a></p>
 </div>
 </body>
 </html>
