--- a/static/fb/auth-en.html
+++ b/static/fb/auth-en.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1.00001,viewport-fit=cover">
 
+<script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/6.0.1/firebase-auth.js"></script>
 <script src="https://cdn.firebase.com/libs/firebaseui/4.0.0/firebaseui.js"></script>
 <link type="text/css" rel="stylesheet" href="https://cdn.firebase.com/libs/firebaseui/4.0.0/firebaseui.css" />
