--- a/static/fb/auth-en.html
+++ b/static/fb/auth-en.html
@@ -24,6 +24,7 @@
           </div>
           <div id="name"></div>
           <div id="email"></div>
+          <div id="phone"></div>
           <div id="is-new-user"></div>
           <div class="clearfix"></div>
         </div>
