--- a/static/test-deep-link.html
+++ b/static/test-deep-link.html
@@ -57,6 +57,9 @@
     <a href="inferstyle://main/home?k1=v1&k2=v2">link</a>
   </p>
 
+  <h3>Navi TEST</h3>
+  <p><a href="https://google.com"> Google </a></p>
+  
 </div>
 <script>
 function redirect_deeplink(e) {
